<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list_words"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_prevs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prew_10"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_nexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_10"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
